--- a/Views/Mvc10ModelBinding/Index.cshtml
+++ b/Views/Mvc10ModelBinding/Index.cshtml
@@ -12,4 +12,5 @@
 <a asp-action="KullaniciSayfasi">Kullanıcı Sayfasına Git</a>
 <a asp-action="AdresSayfasi">Adres Sayfasına Git</a>
 <a asp-action="UyeSayfasi">Üye Bilgi Sayfasına Git</a>
+<a asp-action="UyeSayfasi">Üye Bilgi Sayfasına Git</a>
 
