--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,10 +30,17 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">Hakkımızda</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ModelValidation" asp-action="Index">Validation</a>
+                        </li>
+                        
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mvc09ViewToControllerData" asp-action="Index">Mvc09ViewToControllerData</a>
                         </li>
                          <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mvc10ModelBinding" asp-action="Index">Mvc10ModelBinding</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MvcFluentAndValidation" asp-action="Index">MvcFluentAndValidation</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MvcRazorSyntax" asp-action="Index">RazorSyntax</a>
@@ -56,6 +63,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mvc06Section" asp-action="Index">Section Kullanımı</a>
                         </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Mvc08ControllerToView" asp-action="Index">Mvc08ControllerToView Kullanımı</a>
                         </li>
